# dbtlastfm

./: .gitignore  LICENSE  README.md  dbt_project.yml  extract-and-load.sh  load-data.sh  packages.yml  profiles.yml  pyproject.toml
dbtlastfm/: dbt_project.yml
dbtlastfm/models/imgw/: stg_imgw__climate.sql  stg_imgw__stations.sql
dbtlastfm/models/lastfm/: _lastfm__models.yml  stg_lastfm__scrobbles.sql
models/dwh/: _dwh_models.yml  af_alltime_artist_stats.sql  af_alltime_track_stats.sql  af_monthly_playback_stats.sql  af_yearly_artist_stats.sql  d_album.sql  d_artist.sql  d_calendar.py  d_track.sql  f_playback.sql  metrics.yml  models.yml
models/imgw/: stg_imgw__climate.sql  stg_imgw__stations.sql
models/staging/imgw/: _imgw__models.yml  models.yml  sources.yml  stg_imgw__climate.sql  stg_imgw__stations.sql
models/staging/lastfm/: sources.yml  stg_lastfm__scrobbles.sql
rawdata/imgw/climate/: k_t_01_2020.csv  k_t_01_2021.csv  k_t_01_2022.csv  k_t_02_2020.csv  k_t_02_2021.csv  k_t_02_2022.csv  k_t_03_2020.csv  k_t_03_2021.csv  k_t_03_2022.csv  k_t_04_2020.csv  k_t_04_2021.csv  k_t_04_2022.csv  k_t_05_2020.csv  k_t_05_2021.csv  k_t_05_2022.csv  k_t_06_2020.csv  k_t_06_2021.csv  k_t_06_2022.csv  k_t_07_2020.csv  k_t_07_2021.csv  k_t_07_2022.csv  k_t_08_2020.csv  k_t_08_2021.csv  k_t_08_2022.csv  k_t_09_2020.csv  k_t_09_2021.csv  k_t_09_2022.csv  k_t_10_2020.csv  k_t_10_2021.csv  k_t_10_2022.csv  k_t_11_2020.csv  k_t_11_2021.csv  k_t_11_2022.csv  k_t_12_2020.csv  k_t_12_2021.csv  k_t_12_2022.csv
seeds/mdm/: mdm_artist_dedup.csv  mdm_track_dedup.csv  seeds.yml
(+1 files in other folders)
