[tool.poetry]
name = "dbtlastfm"
version = "0.1.0"
description = ""
authors = ["Mikołaj Gradowski <mikolaj.gradowski@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.4.3"
dbt-duckdb = "^1.4.0"
duckdb = "^0.7.0"
pandas = "^1.5.3"
workalendar = "^17.0.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
ruff = "^0.0.252"
vermin = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
