[tool.poetry]
name = "dbtlastfm"
version = "0.1.0"
description = ""
authors = ["Mikołaj Gradowski <mikolaj.gradowski@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "^1.7.0"
dbt-duckdb = "^1.7.0"
duckdb = "^0.8.0"
pandas = ">=2.0.0,<2.1.0"
workalendar = "^17.0.0"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
ruff = "^0.0.252"
vermin = "^1.5.1"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.17.0"}
ipython = "^8.10.0"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
